--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
   "dependencies": {
     "@tauri-apps/api": "^1",
     "@vueuse/core": "^10.9.0",
+    "naive-ui": "^2.38.2",
     "pinia": "^2.1.7",
+    "vfonts": "^0.0.3",
     "vue": "^3.3.4",
     "vue-router": "4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
     "@types/node": "^20.12.11",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fa": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
+    "@vicons/ionicons4": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
+    "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "less": "^4.2.0",
