--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.8",
     "naive-ui": "^2.38.2",
     "pinia": "^2.1.7",
     "vfonts": "^0.0.3",
