--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,9 +11,11 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-start-dragging", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-hide", "shell-open"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+tauri = { version = "1", features = [ "window-start-dragging", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-hide", "shell-open", "clipboard-all", "http-request"] }
+anyhow = "1.0"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+log = "0.4.17"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
