--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-start-dragging", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-hide", "shell-open", "clipboard-all", "http-request"] }
+tauri = { version = "1", features = [ "macos-private-api", "http-all", "window-start-dragging", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-hide", "shell-open", "clipboard-all"] }
 anyhow = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
