--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1",
+    "@tauri-apps/api": "2.0.0-beta.6",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "monaco-editor": "^0.48.0",
@@ -21,7 +21,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "2.0.0-beta.17",
     "@types/node": "^20.12.11",
     "@vicons/antd": "^0.12.0",
     "@vicons/carbon": "^0.12.0",
