--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,15 +8,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
+
 
 [dependencies]
-tauri = { version = "1", features = [ "macos-private-api", "http-all", "window-start-dragging", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-hide", "shell-open", "clipboard-all"] }
-anyhow = "1.0"
+tauri = { version = "2.0.0-beta", features = [] }
+tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-http = { features = [ "multipart" ], version = "2.0.0-beta.7" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
 log = "0.4.17"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+
+[dependencies.tauri-plugin-sql]
+features = ["sqlite"] # or "postgres", or "mysql"
+version = "2.0.0-beta"
