--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "2.0.0-beta.6",
+    "@tauri-apps/plugin-http": "2.0.0-beta.3",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "monaco-editor": "^0.48.0",
