--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [ "codegen"]  }
 
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [] }
+tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
 tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-http = { features = [ "multipart" ], version = "2.0.0-beta.7" }
+tauri-plugin-http = { features = ["multipart"], version = "2.0.0-beta.7" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
